--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^7.0.3",
+    "axios": "^1.8.4",
     "caotrolinn": "file:",
     "expo": "^52.0.44",
     "expo-constants": "~17.0.8",
