--- a/app.json
+++ b/app.json
@@ -3,31 +3,30 @@
     "name": "caotrolinn",
     "slug": "caotrolinn",
     "version": "1.0.0",
-
     "scheme": "caotrolinn",
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true,
-
       "tsconfigPaths": true
     },
-
     "orientation": "portrait",
     "icon": "",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -35,6 +34,15 @@
       "adaptiveIcon": {
         "foregroundImage": "",
         "backgroundColor": "#ffffff"
+      },
+      "package": "com.riniel.caotrolinn"
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "17404789-98f2-4752-94fc-a47025999fa4"
       }
     }
   }
